--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,94 +1,38 @@
-.main-div {
-    position: sticky;
-    top: 100px;
+#flexxy {
     width: 100%;
-    height: 180px;
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: white;
+    height: 95vh;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-end;
+    row-gap: 44px;
+    box-sizing: border-box;
 }
 
-.subdive1 {
-    position: absolute;
-    left: 50px;
-    top: 50px;
-    width: 100px;
-    height: 100px;
-    background-color: #fff200;
-    border-radius: 10px;
+section>div {
+    padding-left: 15px;
+}
+img{
+    border-radius: 20px;
 }
 
-.subdive2 {
-    position: absolute;
-    left: 300px;
-    top: 50px;
-    width: 800px;
-    height: 100px;
-    background-color: #fff200;
-    border-radius: 10px;
+.inline-text {
+    display: inline-block;
+    width: 300px;
+    padding-left: 16px;
+}
+a{
+    list-style: none;
+    color: black;
+    padding-left: 16px;
 }
 
-.sub-subdive1 {
-    position: absolute;
-    top: 20px;
-    left: 30px;
-    width: 150px;
-    height: 80px;
-    background-color: #0019fb;
-    border-radius: 10px;
-
+a:hover{
+    color: white;
+    background-color: black;
+    cursor: pointer;
 }
 
-.sub-subdive2 {
-    position: absolute;
-    top: 20px;
-    left: 350px;
-    width: 150px;
-    height: 80px;
-    background-color: #0019fb;
-    border-radius: 10px;
 
-}
-
-.sub-subdive3 {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    width: 150px;
-    height: 80px;
-    background-color: #0019fb;
-    border-radius: 10px;
-
-}
-
-.sub-sub-subdive {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background-color: red;
-    top: 0px;
-    right: 0px;
-    border-radius: 10px;
-}
-
-.subdive3 {
-    position: absolute;
-    right: 50px;
-    top: 50px;
-    width: 100px;
-    height: 100px;
-    background-color: #fff200;
-    border-radius: 10px;
-}
-
-.sub-sub-sub {
-    position: absolute;
-    top: 5px;
-    left: 20px;
-    right: 5px;
-    width: 60px;
-    height: 85px;
-    border: 2px solid rgb(78, 78, 4);
-    border-radius: 10px;
-
+div {
+    width: 470px;
 }
