--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,38 +1,34 @@
-#flexxy {
-    width: 100%;
-    height: 95vh;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: flex-end;
-    row-gap: 44px;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-section>div {
-    padding-left: 15px;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-img{
+
+#anime {
+    width: 700px;
+    height: 150px;
+    background-color: orange;
     border-radius: 20px;
+    animation-name: dude;
+    animation: FirstAnime 1.3s linear infinite alternate;  
+    position: relative;
 }
 
-.inline-text {
-    display: inline-block;
-    width: 300px;
-    padding-left: 16px;
-}
-a{
-    list-style: none;
-    color: black;
-    padding-left: 16px;
-}
+@keyframes FirstAnime {
+    from {
+        top: 50px;
+        width: 700px;
+    }
 
-a:hover{
-    color: white;
-    background-color: black;
-    cursor: pointer;
-}
-
-
-div {
-    width: 470px;
+    to {
+        top: 200px;
+        width: 20px;
+        background-color: black;
+    }
 }
